--- a/10-secret.yaml
+++ b/10-secret.yaml
@@ -1,10 +1,8 @@
-kind: Secret
+kind: Pod
 apiVersion: v1
 metadata:
- name: dotfile-Secret
+ name: dotfile-secret
 type: Opaque
 data:
- username: YWRtaW4=
- password: YWRtaW4xMjM=
-
- 
+  username: YWRtaW4=
+  password: YWRtaW4xMjM0
